<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/cardPadding">

    <ImageView
        android:id="@+id/contactDetailsPhoto"
        android:layout_width="@dimen/cardImageViewSide"
        android:layout_height="@dimen/cardImageViewSide"
        android:contentDescription="@string/photo"
        android:src="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/contactDetailsName"
        android:layout_width="0dp"
        android:layout_height="@dimen/cardImageViewSide"
        android:layout_marginHorizontal="@dimen/cardHorizontalMargin"
        android:gravity="center_vertical|start"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/contactDetailsPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/contactDetailsPhone1"
        style="@style/ContactDetailsListItem"
        android:text="@string/phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsPhoto" />

    <TextView
        android:id="@+id/contactDetailsPhone2"
        style="@style/ContactDetailsListItem"
        android:text="@string/phone_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsPhone1" />

    <TextView
        android:id="@+id/contactDetailsEmail1"
        style="@style/ContactDetailsListItem"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsPhone2" />

    <TextView
        android:id="@+id/contactDetailsEmail2"
        style="@style/ContactDetailsListItem"
        android:text="@string/email_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsEmail1" />

    <TextView
        android:id="@+id/contactDetailsDescription"
        android:layout_width="0dp"
        android:layout_height="@dimen/cardImageViewSide"
        android:gravity="center_vertical|start"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDetailsEmail2" />
</androidx.constraintlayout.widget.ConstraintLayout>